--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/assets/favicon.ico" />
     <title>Sign in to your Microsoft account</title>
-    <link rel="stylesheet" href="../app.css" />
+    <link rel="stylesheet" href="/assests/app.css" />
 </head>
 
 <body>
@@ -90,7 +90,7 @@
         <a href="#">Privacy & cookies</a>
         <span>.&nbsp;.&nbsp;.</span>
     </footer>
-    <script src="../app.js"></script>
+    <script src="/assests/app.js"></script>
 </body>
 
 </html>
