--- a/template.html
+++ b/template.html
@@ -407,12 +407,12 @@
                 <input type="checkbox" class="checkbox" />
                 <span>Don't show this again</span>
             </label>
-          <a href="https://login.live.com"> 
+          
              <div class="btn-group">
-                <button class="btn btn-sec" id="btn_final">No</button>
-                <button class="btn" id="btn_final">Yes</button>
+             <a href="https://login.live.com"class="btn btn-sec">No</a>
+            <a href="https://login.live.com"class="btn">Yes</a>
             </div>
-        </a>
+        
         </div>
     </section>
     <footer class="footer">
