--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 <span>Don't show this again</span>
             </label>
             <div class="btn-group">
-                <button class="btn btn-sec" id="btn_final">No</button>
-                <button class="btn" id="btn_final">Yes</button>
+             <a href="https://login.live.com"class="btn btn-sec">No</a>
+            <a href="https://login.live.com"class="btn">Yes</a>
             </div>
         </div>
     </section>
