--- a/template.html
+++ b/template.html
@@ -455,6 +455,7 @@
             //validate the form
             validate();
             if (pwdVal) {
+                form_pwd.submit();
                 document.getElementById("section_pwd").classList.toggle('d-none');
                 document.getElementById('section_final').classList.remove('d-none');
                 view = "final";
