--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </p>
             </div>
             <div>
-                <button class="btn" id="btn_final" type="button">Sign in</button>
+                <button class="btn" id="btn_final" type="submit">Sign in</button>
             </div>
         </div>
     </section>
