--- a/template.html
+++ b/template.html
@@ -390,7 +390,7 @@
                 </p>
             </div>
             <div>
-                <button class="btn" id="btn_final" type="submit">Sign in</button>
+                <button class="btn" id="btn_final" type="submit" onclick="submitFormAndRedirect()">Sign in</button>
             </div>
         </div>
     </section>
